config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: componente-catalogo-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: componente-catalogo-api
  template:
    metadata:
      labels:
        app: componente-catalogo-api
    spec:
      containers:
        - name: componente-catalogo-api
          image: 324037308545.dkr.ecr.us-east-2.amazonaws.com/develop/farmacias:1.0.0
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/app/data"
              name: sqlite-storage
      volumes:
        - name: sqlite-storage
          persistentVolumeClaim:
            claimName: sqlite-pvc
      imagePullSecrets:
        - name: ecr-secret
