config/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: componente-catalogo-api-service
  namespace: develop
spec:
  type: LoadBalancer
  selector:
    app: componente-catalogo-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
