config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: componente-catalogo-api-ingress
  namespace: develop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: catalogo-api.luciel.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: componente-catalogo-api-service
                port:
                  number: 80
